@@ -1,4 +1,8 @@
 Changes for 1.5.2.1
+* Fixed null pointer error in Dynamix AI's determining of where to put a factory. (veqryn)
+
+* Having the default loaded game be loaded separately from the game chooser list, and putting the loading of the list into a separate thread. (veqryn & frigoref)
+
 * Removing game chooser list from memory when we start a game, or join a game, or join the lobby. (veqryn & frigoref)
 
 * Removed restriction of not being able to land in land territories with pending battles (there is still a restriction of course on who owns the territory, and whether it was conquered this turn or not). (veqryn) 
